[gd_scene load_steps=9 format=3 uid="uid://0if862voirqk"]

[ext_resource type="Script" uid="uid://1b082h2e8tqs" path="res://scripts/environment/hint.gd" id="1_m6f2g"]
[ext_resource type="Texture2D" uid="uid://csv288h5cgbi2" path="res://assets/Palm Tree Island/Sprites/Objects/hint_sign_16x64.png" id="1_q5ohl"]
[ext_resource type="Texture2D" uid="uid://7p4k3qvp74qq" path="res://assets/Wood and Paper UI/Sprites/Big Text/enter_button.png" id="3_lh64f"]
[ext_resource type="AudioStream" uid="uid://c16twkqfyxjuy" path="res://audio/pirate/surprised_1.wav" id="4_54e7d"]
[ext_resource type="AudioStream" uid="uid://c7lmhbyxgrqen" path="res://audio/pirate/surprised_2.wav" id="5_eg4cs"]
[ext_resource type="AudioStream" uid="uid://c2hrdgeyio3yh" path="res://audio/pirate/surprised_3.wav" id="6_7ttg5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q5ohl"]
radius = 8.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_54e7d"]
streams_count = 3
stream_0/stream = ExtResource("4_54e7d")
stream_1/stream = ExtResource("5_eg4cs")
stream_2/stream = ExtResource("6_7ttg5")

[node name="Hint" type="Area2D"]
z_index = -1
collision_layer = 0
collision_mask = 256
script = ExtResource("1_m6f2g")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_q5ohl")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -8)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_q5ohl")

[node name="EnterSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4.76837e-07, -42)
scale = Vector2(1.04152, 1.04152)
texture = ExtResource("3_lh64f")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_54e7d")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
